html-router/tests/snapshots/dashboard_main.snap
---
source: html-router/tests/router_integration.rs
expression: main
---

        
<div class="flex justify-center grow mt-2 sm:mt-4 pb-4 w-full">
  <div class="container">
    <section class="mb-4">
      
      
      <div class="nb-panel p-3 flex items-center justify-between">
        
  <h1 class="text-xl font-extrabold tracking-tight">Dashboard</h1>
  <button class="nb-btn nb-cta" hx-get="/ingest-form" hx-target="#modal" hx-swap="innerHTML">
    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
  width="20" height="20" class="size-6">
  <path stroke-linecap="round" stroke-linejoin="round"
    d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5" />
</svg>
    <span class="ml-2">Add Content</span>
  </button>

      </div>
    </section>

    
  <section class="mb-4 sm:mt-4">
  <h2 class="text-2xl font-extrabold tracking-tight mb-3">Overview</h2>
  <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-4">
    <div class="nb-stat">
      <div class="text-xs opacity-70">Total Documents</div>
      <div class="text-3xl font-extrabold">0</div>
      <div class="text-xs opacity-60">+0 this week</div>
    </div>
    <div class="nb-stat">
      <div class="text-xs opacity-70">Text Chunks</div>
      <div class="text-3xl font-extrabold">0</div>
      <div class="text-xs opacity-60">+0 this week</div>
    </div>
    <div class="nb-stat">
      <div class="text-xs opacity-70">Knowledge Entities</div>
      <div class="text-3xl font-extrabold">0</div>
      <div class="text-xs opacity-60">+0 this week</div>
    </div>
    <div class="nb-stat">
      <div class="text-xs opacity-70">Conversations</div>
      <div class="text-3xl font-extrabold">0</div>
      <div class="text-xs opacity-60">+0 this week</div>
    </div>
  </div>
</section>
  
<div id="latest_content_section" class="list">
  <h2 class="text-2xl mb-2 font-extrabold">Recent content</h2>
  <div id="latest_text_content_cards" class="space-y-6">
  
  <div class="nb-card p-8 text-center text-sm opacity-70">
    No content found.
  </div>
  
</div>
</div>

  
<section id="active_jobs_section" class="nb-panel p-4 space-y-4 mt-6 sm:mt-8">
  <header class="flex flex-wrap items-center justify-between gap-3">
    <h2 class="text-xl font-extrabold tracking-tight">Active Tasks</h2>
    <div class="flex gap-2">
      <button class="nb-btn btn-square btn-sm" hx-get="/active-jobs" hx-target="#active_jobs_section" hx-swap="outerHTML"
        aria-label="Refresh active tasks">
        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
  width="20" height="20" class="size-6">
  <path stroke-linecap="round" stroke-linejoin="round"
    d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
</svg>
      </button>
      <button class="nb-btn btn-sm" hx-get="/jobs/archive" hx-target="#modal" hx-swap="innerHTML"
        aria-label="View task archive">
        View Archive
      </button>
    </div>
  </header>
  
</section>


  </div>
</div>

        <div class="p32 min-h-[10px]"></div>
