html-router/tests/snapshots/not_found_main.snap
---
source: html-router/tests/router_integration.rs
assertion_line: 325
expression: main
---

        
<main class="container justify-center flex-grow flex mx-auto mt-4">
  <div class="flex flex-col space-y-4 text-center justify-center">
    
  <h1 class="text-2xl font-bold  text-error">
    404
  </h1>
  <p class="text-2xl my-4">Page Not Found</p>
  <p class="text-base-content/60">The page you&#x27;re looking for doesn&#x27;t exist or was removed.</p>
  <a href="/" class="btn btn-primary mt-8">Go Home</a>

  </div>
